@@ -6099,14 +6099,13 @@ TclNREvalObjEx(
 
 		result = TclEvalEx(interp, script, numSrcBytes, flags,
 			ctxPtr->line[word], NULL, script);
+	    }
+	    if (pc && (ctxPtr->type == TCL_LOCATION_SOURCE)) {
+		/*
+		 * Death of SrcInfo reference.
+		 */
 
-		if (pc) {
-		    /*
-		     * Death of SrcInfo reference.
-		     */
-
-		    Tcl_DecrRefCount(ctxPtr->data.eval.path);
-		}
+		Tcl_DecrRefCount(ctxPtr->data.eval.path);
 	    }
 	    TclStackFree(interp, ctxPtr);
 
