@@ -1,3 +1,11 @@
+2009-11-09  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclBasic.c (TclEvalObjEx): Moved the #280 decrement of
+	refCount for the file path out of the branch after the whole
+	conditional, closing a memory leak. Added clause on structure type
+	to prevent seg.faulting. Forward port from valgrinding the Tcl 8.5
+	branch.
+
 2009-11-08  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/string.n (bytelength): Noted that this command is not a good
